view: handle cases where indent-width and tab-width match

Currently, indent-width is set to -1 to set a behavior that it should
inherit the value of tab-width. However, if the value actually matches
tab-width, a different behavior is applied for the insertion of tabs.

This handles that scenario when indenting and lines and inserting tabs.

https://bugzilla.gnome.org/show_bug.cgi?id=786988